src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.available {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.available>* {
    /* margin: 1%; */
    border: 1px solid #BDD3D1;
}

.main .bug {
    background-color: #BEF4EB;
}

.main .fish {
    background-color: #BFF5F9;
}

/* .main .cardHeader {
    padding-bottom: 0;
}

.main .cardInfo {
    padding-top: 0;
} */

#extraInfo {
    display: flex;
    justify-content: space-between;
}

